added dev and prod scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "webpack demo",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "dev": "npm run webpack -- --mode development",
+    "prod": "npm run webpack -- --mode production"
   },
   "keywords": [
     "webpack"
