config presets; add typescript presets

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "webpack": "webpack",
     "debug": "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack.js",
     "dev": "npm run webpack-dev-server -- --env.mode development --hot",
+    "prod:typescript": "npm run prod -- --env.presets typescript",
     "prod": "npm run webpack -- --env.mode production",
     "prod:debug": "npm run debug -- --env.mode production",
     "dev:debug": "npm run debug -- --env.mode development",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "file-loader": "^6.0.0",
+    "typescript": "^3.9.0-dev.20200414",
     "url-loader": "^4.1.0",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
