--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "debug": "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack.js",
     "dev": "npm run webpack-dev-server -- --env.mode development --hot",
     "prod:typescript": "npm run prod -- --env.presets typescript",
+    "prod:analyze": "npm run prod -- --env.presets analyze",
     "prod": "npm run webpack -- --env.mode production",
     "prod:debug": "npm run debug -- --env.mode production",
     "dev:debug": "npm run debug -- --env.mode development",
@@ -32,7 +33,7 @@
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "webpack": "^4.42.1",
-    "webpack-bundle-analyzer": "^3.6.1",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2",
     "workbox-webpack-plugin": "^5.1.2"
