--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "npm run webpack-dev-server -- --env.mode development --hot",
     "prod:typescript": "npm run prod -- --env.presets typescript",
     "prod:analyze": "npm run prod -- --env.presets analyze",
+    "prod:compress": "npm run prod -- --env.presets compress",
     "prod": "npm run webpack -- --env.mode production",
     "prod:debug": "npm run debug -- --env.mode production",
     "dev:debug": "npm run debug -- --env.mode development",
@@ -39,6 +40,7 @@
     "workbox-webpack-plugin": "^5.1.2"
   },
   "devDependencies": {
+    "compression-webpack-plugin": "^3.1.0",
     "file-loader": "^6.0.0",
     "typescript": "^3.9.0-dev.20200414",
     "url-loader": "^4.1.0",
